...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/confirmButton"
            style="@style/FirebaseUI.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm Location"
            android:layout_marginBottom="24dp"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
...
